--- a/src/scss/TaskBoard.scss
+++ b/src/scss/TaskBoard.scss
@@ -3,6 +3,126 @@
   padding: 0;
   box-sizing: border-box;
 }
+@media (min-width: 280px) {
+  .wrapper {
+    min-width: 280px;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+    background: rgb(34, 193, 195);
+    background: -moz-linear-gradient(
+      0deg,
+      rgba(34, 193, 195, 1) 45%,
+      rgba(131, 249, 169, 1) 55%
+    );
+    background: -webkit-linear-gradient(
+      0deg,
+      rgba(34, 193, 195, 1) 45%,
+      rgba(131, 249, 169, 1) 55%
+    );
+    background: linear-gradient(
+      0deg,
+      rgba(34, 193, 195, 1) 45%,
+      rgba(131, 249, 169, 1) 55%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#22c1c3",endColorstr="#83f9a9",GradientType=1);
+
+    .formBox {
+      margin: 0 auto;
+      height: 29rem;
+      width: 80%;
+      background-color: whitesmoke;
+      box-shadow: 3px 3px 5px 2px black;
+      .titleImage {
+        width: 100%;
+        height: 10rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+
+        .logo {
+          display: block;
+          height: 70%;
+          padding-top: 1rem;
+        }
+        .title {
+          font-size: 20px;
+          font-weight: bold;
+        }
+      }
+      .taskBox {
+        width: 80%;
+        height: 60%;
+        margin: 0 auto;
+        overflow-y: scroll;
+        padding-top: 2rem;
+        .taskItem {
+          width: 100%;
+          height: 1.65rem;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding-left: 1rem;
+          padding-right: 0.45rem;
+          margin-bottom: 1rem;
+          // z-index: 2;
+          -webkit-box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
+          -moz-box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
+          box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
+
+          .deleteBtn {
+            width: 2rem;
+            height: 75%;
+            background-color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 2rem 2rem;
+            .fa-minus {
+              color: white;
+              font-size: 1.65rem;
+            }
+          }
+        }
+      }
+    }
+    .addTaskFormBox {
+      height: 6.25rem;
+      width: 100%;
+      .addTaskForm {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+
+        .taskName {
+          width: 70%;
+          height: 1.68rem;
+          color: rgba(34, 193, 195, 1);
+        }
+        .addTaskBtn {
+          background-color: #b5e7a0;
+          border: none;
+          border-radius: 1rem 1rem;
+          padding: 0.45rem;
+        }
+        .saveList {
+          background-color: #b5e7a0;
+          border: none;
+          border-radius: 1rem 1rem;
+          padding: 0.45rem;
+        }
+      }
+    }
+  }
+}
+
 @media (min-width: 320px) {
   .wrapper {
     min-width: 320px;
@@ -88,20 +208,6 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.25rem;
-          text-align: center;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 4.85rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
@@ -165,7 +271,7 @@
 
     .formBox {
       margin: 0 auto;
-      height: 30rem;
+      height: 32rem;
       width: 80%;
       background-color: whitesmoke;
       box-shadow: 3px 3px 5px 2px black;
@@ -195,7 +301,7 @@
         padding-top: 2rem;
         .taskItem {
           width: 100%;
-          height: 1.65rem;
+          height: 1.95rem;
           display: flex;
           justify-content: space-between;
           align-items: center;
@@ -221,25 +327,10 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 60%;
-          margin-top: 1rem;
-          font-size: 1.25rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            // margin-top: 1rem;
-            font-size: 3.85rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
-      height: 9rem;
+      height: 8rem;
       width: 100%;
       .addTaskForm {
         width: 100%;
@@ -353,21 +444,6 @@
               color: white;
               font-size: 1.65rem;
             }
-          }
-        }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.45rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 6.85rem;
-            display: block;
-            width: 100%;
           }
         }
       }
@@ -495,21 +571,6 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 5.45rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
@@ -576,7 +637,7 @@
 
     .formBox {
       margin: 0 auto;
-      height: 37rem;
+      height: 34rem;
       width: 80%;
       background-color: whitesmoke;
       box-shadow: 3px 3px 5px 2px black;
@@ -632,25 +693,10 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 3rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
-      height: 7rem;
+      height: 13rem;
       width: 100%;
       .addTaskForm {
         width: 100%;
@@ -667,6 +713,13 @@
           font-size: 2rem;
         }
         .addTaskBtn {
+          background-color: #b5e7a0;
+          border: none;
+          border-radius: 1rem 1rem;
+          padding: 1rem;
+          font-size: 1.12rem;
+        }
+        .saveList {
           background-color: #b5e7a0;
           border: none;
           border-radius: 1rem 1rem;
@@ -762,21 +815,6 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 4rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
@@ -800,15 +838,15 @@
           background-color: #b5e7a0;
           border: none;
           border-radius: 1rem 1rem;
-          padding: 1.25rem;
-          font-size: 1.45rem;
+          padding: 1rem;
+          font-size: 1rem;
         }
         .saveList {
           background-color: #b5e7a0;
           border: none;
           border-radius: 1rem 1rem;
-          padding: 1.25rem;
-          font-size: 1.45rem;
+          padding: 1rem;
+          font-size: 1rem;
         }
       }
     }
@@ -873,14 +911,14 @@
         padding-top: 2rem;
         .taskItem {
           width: 100%;
-          height: 3.65rem;
+          height: 2.65rem;
           display: flex;
           justify-content: space-between;
           align-items: center;
           padding-left: 1rem;
           padding-right: 0.45rem;
           margin-bottom: 1rem;
-          font-size: 2rem;
+          font-size: 1.45rem;
           // z-index: 2;
           -webkit-box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
           -moz-box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
@@ -900,25 +938,10 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
-      height: 12rem;
+      height: 14rem;
       width: 100%;
       .addTaskForm {
         width: 100%;
@@ -981,7 +1004,7 @@
 
     .formBox {
       margin: 0 auto;
-      height: 35rem;
+      height: 33rem;
       width: 60%;
       background-color: whitesmoke;
       box-shadow: 3px 3px 5px 2px black;
@@ -1011,13 +1034,14 @@
         padding-top: 2rem;
         .taskItem {
           width: 100%;
-          height: 2.65rem;
+          height: 2.45rem;
           display: flex;
           justify-content: space-between;
           align-items: center;
           padding-left: 1rem;
           padding-right: 0.45rem;
           margin-bottom: 1rem;
+
           // z-index: 2;
           -webkit-box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
           -moz-box-shadow: inset 0px 0px 13px -1px rgba(0, 0, 0, 0.75);
@@ -1035,21 +1059,6 @@
               color: white;
               font-size: 1.65rem;
             }
-          }
-        }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
           }
         }
       }
@@ -1181,21 +1190,6 @@
             }
           }
         }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
-          }
-        }
       }
     }
     .addTaskFormBox {
@@ -1309,21 +1303,6 @@
               color: white;
               font-size: 1.65rem;
             }
-          }
-        }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
           }
         }
       }
@@ -1446,21 +1425,6 @@
               color: white;
               font-size: 1.65rem;
             }
-          }
-        }
-        .emptyListTitle {
-          display: block;
-          width: 100%;
-          height: 70%;
-          margin-top: 2rem;
-          font-size: 1.85rem;
-          text-align: center;
-          padding: 0 1rem;
-          .fa-smile-wink {
-            margin-top: 4rem;
-            font-size: 7.45rem;
-            display: block;
-            width: 100%;
           }
         }
       }
